--- a/index.html
+++ b/index.html
@@ -67,70 +67,105 @@
             </div>
         </section>
 
-        <section id="about" class="about">
-            <div class="container">
-                <h2>Kim jesteśmy?</h2>
-                <div class="about-content">
-                    <div class="about-text">
-                        <h3>Tworzymy przyszłość online</h3>
-                        <p>Witaj w CreativeFront! Jesteśmy Twoim partnerem w tworzeniu niesamowitych stron internetowych i sklepów online na platformach Shopify i WordPress. Nasza specjalność to budowanie funkcjonalnych i pięknych witryn, które nie tylko przyciągają uwagę, ale także działają bez zarzutu.</p>
-                        <p>Kochamy to, co robimy, a w branży jesteśmy już od ponad 3 lat. Nasz zespół doskonale zna się na HTML, CSS, JavaScript i różnych jego bibliotekach, takich jak React. Dzięki temu potrafimy zrealizować nawet najbardziej wymagające projekty. Ale to nie wszystko! Zajmujemy się również grafiką - tworzymy loga, banery i całą resztę wizualnych elementów, które sprawiają, że Twoja marka wyróżnia się na tle konkurencji.</p>
-                   <p>Wiemy, jak ważne jest, żeby strona była dobrze widoczna w wyszukiwarkach, dlatego optymalizujemy nasze projekty pod kątem SEO/SEM. Zwiększamy widoczność Twojej strony i przyciągamy na nią więcej klientów, co przekłada się na realne zyski.</p>
-                   <p>Najważniejsze dla nas jest to, żeby każdy projekt był wykonany rzetelnie i na czas. Dbamy o stały kontakt z klientem, żebyś zawsze wiedział, co się dzieje i żeby nie było żadnych niedomówień. Razem możemy stworzyć coś naprawdę wyjątkowego.</p>
+       <section id="about" class="about">
+    <div class="container">
+        <h2>O nas</h2>
+        <div class="about-content">
+            <div class="about-text">
+                <h3>Tworzymy przyszłość online</h3>
+                <p>W CreativeFront wierzymy, że każdy biznes zasługuje na wyjątkową obecność w internecie. Nasza pasja do innowacji i kreatywnego myślenia pozwala nam tworzyć rozwiązania, które nie tylko wyglądają świetnie, ale również przynoszą realne rezultaty.</p>
+            </div>
+            <div class="about-image">
+                <img src="Gray Minimalist Phone Mockup Facebook Cover.jpg" alt="Zespół CreativeFront">
+            </div>
+        </div>
+        <div class="about-tiles">
+            <div class="tile">
+                <div class="tile-inner">
+                    <div class="tile-front">
+                        <h3>Nasza Misja <i class="fas fa-chevron-down"></i></h3>
+                        <p>Dostarczamy innowacyjne rozwiązania webowe...</p>
                     </div>
-                    <div class="about-image">
-                        <img src="Gray Minimalist Phone Mockup Facebook Cover.jpg" alt="Zespół CreativeFront">
-                    </div>
-                </div>
-                <div class="stats">
-                    <div class="stat-item">
-                        <div class="stat-number" data-target="3">0</div>
-                        <p>Lat doświadczenia</p>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-number" data-target="120">0</div>
-                        <p>Zrealizowanych projektów</p>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-number" data-target="120">0</div>
-                        <p>Zadowolonych klientów</p>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-number" data-target="14">0</div>
-                        <p>Średni czas realizacji projektu</p>
-                    </div>
-                </div>
-                <div class="skills">
-                    <div class="skill-item">
-                        <div class="skill-name">
-                            <span>Shopify</span>
-                            <span>100%</span>
-                        </div>
-                        <div class="skill-bar">
-                            <div class="skill-progress" data-width="100%"></div>
-                        </div>
-                    </div>
-                    <div class="skill-item">
-                        <div class="skill-name">
-                            <span>WordPress</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="skill-bar">
-                            <div class="skill-progress" data-width="90%"></div>
-                        </div>
-                    </div>
-                    <div class="skill-item">
-                        <div class="skill-name">
-                            <span>HTML, CSS, JS</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="skill-bar">
-                            <div class="skill-progress" data-width="80%"></div>
-                        </div>
+                    <div class="tile-back">
+                        <h3>Nasza Misja</h3>
+                        <p>Dostarczamy innowacyjne rozwiązania webowe, które pomagają naszym klientom osiągać sukces w cyfrowym świecie. Naszym celem jest tworzenie stron internetowych i sklepów online, które nie tylko wyglądają atrakcyjnie, ale również przynoszą realne korzyści biznesowe.</p>
                     </div>
                 </div>
             </div>
-        </section>
+            <div class="tile">
+                <div class="tile-inner">
+                    <div class="tile-front">
+                        <h3>Nasza Wizja <i class="fas fa-chevron-down"></i></h3>
+                        <p>Dążymy do bycia liderem w branży...</p>
+                    </div>
+                    <div class="tile-back">
+                        <h3>Nasza Wizja</h3>
+                        <p>Dążymy do bycia liderem w branży tworzenia stron internetowych, wyznaczając nowe standardy w designie i funkcjonalności. Chcemy być znani jako firma, która nie tylko podąża za trendami, ale je kreuje, dostarczając klientom rozwiązania, które wyprzedzają ich oczekiwania.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="tile">
+                <div class="tile-inner">
+                    <div class="tile-front">
+                        <h3>Nasza Specjalizacja <i class="fas fa-chevron-down"></i></h3>
+                        <p>Tworzymy responsywne strony internetowe...</p>
+                    </div>
+                    <div class="tile-back">
+                        <h3>Nasza Specjalizacja</h3>
+                        <p>Specjalizujemy się w tworzeniu responsywnych stron internetowych, wydajnych sklepów online oraz kompleksowych strategii marketingu cyfrowego. Nasz zespół ekspertów łączy najnowsze trendy w designie z zaawansowanymi rozwiązaniami technologicznymi, aby zapewnić naszym klientom przewagę konkurencyjną w dynamicznym świecie online.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="stats">
+            <div class="stat-item">
+                <div class="stat-number" data-target="5">0</div>
+                <p>Lat doświadczenia</p>
+            </div>
+            <div class="stat-item">
+                <div class="stat-number" data-target="100">0</div>
+                <p>Zrealizowanych projektów</p>
+            </div>
+            <div class="stat-item">
+                <div class="stat-number" data-target="98">0</div>
+                <p>Zadowolonych klientów</p>
+            </div>
+            <div class="stat-item">
+                <div class="stat-number" data-target="14">0</div>
+                <p>Dni - średni czas realizacji</p>
+            </div>
+        </div>
+        <div class="skills">
+            <div class="skill-item">
+                <div class="skill-name">
+                    <span>Shopify</span>
+                    <span>100%</span>
+                </div>
+                <div class="skill-bar">
+                    <div class="skill-progress" data-width="100%"></div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <div class="skill-name">
+                    <span>WordPress</span>
+                    <span>90%</span>
+                </div>
+                <div class="skill-bar">
+                    <div class="skill-progress" data-width="90%"></div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <div class="skill-name">
+                    <span>HTML, CSS, JS</span>
+                    <span>75%</span>
+                </div>
+                <div class="skill-bar">
+                    <div class="skill-progress" data-width="75%"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
         <section id="why-us" class="why-us">
             <div class="container">
