--- a/index.html
+++ b/index.html
@@ -73,10 +73,8 @@
                 <div class="about-content">
                     <div class="about-text">
                         <h3>Tworzymy przyszłość online</h3>
-                        <p>Witaj w CreativeFront! Jesteśmy Twoim partnerem w tworzeniu niesamowitych stron internetowych i sklepów online na platformach Shopify i WordPress. Nasza specjalność to budowanie funkcjonalnych i pięknych witryn, które nie tylko przyciągają uwagę, ale także działają bez zarzutu.</p>
-                        <p>Kochamy to, co robimy, a w branży jesteśmy już od ponad 3 lat. Nasz zespół doskonale zna się na HTML, CSS, JavaScript i różnych jego bibliotekach, takich jak React. Dzięki temu potrafimy zrealizować nawet najbardziej wymagające projekty. Ale to nie wszystko! Zajmujemy się również grafiką - tworzymy loga, banery i całą resztę wizualnych elementów, które sprawiają, że Twoja marka wyróżnia się na tle konkurencji.</p>
-                        <p>Wiemy, jak ważne jest, żeby strona była dobrze widoczna w wyszukiwarkach, dlatego optymalizujemy nasze projekty pod kątem SEO/SEM. Zwiększamy widoczność Twojej strony i przyciągamy na nią więcej klientów, co przekłada się na realne zyski.</p>
-                        <p>Najważniejsze dla nas jest to, żeby każdy projekt był wykonany rzetelnie i na czas. Dbamy o stały kontakt z klientem, żebyś zawsze wiedział, co się dzieje i żeby nie było żadnych niedomówień. Razem możemy stworzyć coś naprawdę wyjątkowego.</p>
+                        <p>Witaj w CreativeFront! Tworzymy niesamowite strony internetowe i sklepy online na Shopify i WordPress. Specjalizujemy się w funkcjonalnych i pięknych witrynach. Działamy od ponad 3 lat, mamy doświadczenie w HTML, CSS, JavaScript (React), oraz grafice (loga, banery). Optymalizujemy projekty pod kątem SEO/SEM, zwiększając widoczność i zyski. Dbamy o rzetelność, terminowość i stały kontakt z klientem.</p>
+                    
                     </div>
                     <div class="about-image">
                         <img src="Gray Minimalist Phone Mockup Facebook Cover.jpg" alt="Zespół CreativeFront">
