--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                     <div class="tile">
                         <div class="tile-inner">
                             <div class="tile-front">
-                                <h3>Nasza Misja <i class="fas fa-chevron-down"></i></h3>
+                                <h3>Nowoczesne Technologie dla Rozwoju Twojej Firmy <i class="fas fa-chevron-down"></i></h3>
                                 <p>Dostarczamy innowacyjne rozwiązania webowe...</p>
                             </div>
                             <div class="tile-back">
-                                <h3>Nasza Misja</h3>
+                                <h3>Nowoczesne Technologie dla Rozwoju Twojej Firmy</h3>
                                 <p>Dostarczamy innowacyjne rozwiązania webowe, które pomagają naszym klientom osiągać sukces w cyfrowym świecie. Naszym celem jest tworzenie stron internetowych i sklepów online, które nie tylko wyglądają atrakcyjnie, ale również przynoszą realne korzyści biznesowe.</p>
                             </div>
                         </div>
@@ -96,11 +96,11 @@
                     <div class="tile">
                         <div class="tile-inner">
                             <div class="tile-front">
-                                <h3>Nasza Wizja <i class="fas fa-chevron-down"></i></h3>
+                                <h3>Kreowanie Przyszłości Internetu z Wyjątkowym Designem i Funkcjonalnością <i class="fas fa-chevron-down"></i></h3>
                                 <p>Dążymy do bycia liderem w branży...</p>
                             </div>
                             <div class="tile-back">
-                                <h3>Nasza Wizja</h3>
+                                <h3>Kreowanie Przyszłości Internetu z Wyjątkowym Designem i Funkcjonalnością</h3>
                                 <p>Dążymy do bycia liderem w branży tworzenia stron internetowych, wyznaczając nowe standardy w designie i funkcjonalności. Chcemy być znani jako firma, która nie tylko podąża za trendami, ale je kreuje, dostarczając klientom rozwiązania, które wyprzedzają ich oczekiwania.</p>
                             </div>
                         </div>
@@ -108,11 +108,11 @@
                     <div class="tile">
                         <div class="tile-inner">
                             <div class="tile-front">
-                                <h3>Nasza Specjalizacja <i class="fas fa-chevron-down"></i></h3>
+                                <h3>Eksperci w Responsywnych Stronach i Sklepach Online z Nowoczesnymi Strategiami Marketingowymi <i class="fas fa-chevron-down"></i></h3>
                                 <p>Tworzymy responsywne strony internetowe...</p>
                             </div>
                             <div class="tile-back">
-                                <h3>Nasza Specjalizacja</h3>
+                                <h3>Eksperci w Responsywnych Stronach i Sklepach Online z Nowoczesnymi Strategiami Marketingowymi</h3>
                                 <p>Specjalizujemy się w tworzeniu responsywnych stron internetowych, wydajnych sklepów online oraz kompleksowych strategii marketingu cyfrowego. Nasz zespół ekspertów łączy najnowsze trendy w designie z zaawansowanymi rozwiązaniami technologicznymi, aby zapewnić naszym klientom przewagę konkurencyjną w dynamicznym świecie online.</p>
                             </div>
                         </div>
