--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="stats">
                     <div class="stat-item">
                         <div class="stat-number" data-target="3">0</div>
-                        <p>Lat doświadczenia</p>
+                        <p>Lata doświadczenia</p>
                     </div>
                     <div class="stat-item">
                         <div class="stat-number" data-target="120">0</div>
@@ -133,7 +133,7 @@
                     </div>
                     <div class="stat-item">
                         <div class="stat-number" data-target="14">0</div>
-                        <p>Średni czas realizacji projektu</p>
+                        <p>Dni - Średni czas realizacji projektu</p>
                     </div>
                 </div>
                 <div class="skills">
