--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#services">Usługi</a></li>
                     <li><a href="#about">O nas</a></li>
                     <li><a href="#portfolio">Realizacje</a></li>
-                    <li><a href="#process">Proces</a></li>
+                    <li><a href="#process">Proces realizacji</a></li>
                     <li><a href="#contact">Kontakt</a></li>
                 </ul>
             </nav>
