--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
                 <h2>Nasze ostatnie realizacje</h2>
                 <div class="portfolio-grid">
                     <div class="portfolio-item">
-                        <img src="screencapture-cichoszau-pl-2024-07-23-19_16_03.png"
-                        <div class=" portfolio-item">
+                        <img src="screencapture-cichoszau-pl-2024-07-23-19_16_03.png" alt="Projekt strony Cichoszau.pl - organizacja imprez"
+                            <div class="portfolio-item">
                         <img src="screencapture-cichoszau-pl-2024-07-23-19_16_03.png" alt="Projekt strony Cichoszau.pl - organizacja imprez Silent Disco" width="300" height="200" loading="lazy">
                         <div class="portfolio-overlay">
                             <h3>Cichoszau.pl</h3>
@@ -444,4 +444,5 @@
     </div>
 
     <script src="script.js" defer></script>
-</body></html>
+</body>
+</html>
