--- a/index.html
+++ b/index.html
@@ -169,47 +169,48 @@
             </div>
         </section>
 
-        <section id="contact" class="contact">
-            <div class="container">
-                <h2>Skontaktuj się z nami</h2>
-                <div class="contact-content">
-                    <div class="contact-info fade-in">
-                        <p>Jesteśmy tutaj, aby Ci pomóc. Masz pytania lub chcesz omówić swój projekt? Skontaktuj się z nami już dziś!</p>
-                        <p><strong>Telefon:</strong> <a href="tel:+48792828884">+48 792 828 884</a></p>
-                        <p><strong>Email:</strong> <a href="mailto:creativefront.projects@gmail.com">creativefront.projects@gmail.com</a></p>
-                    </div>
-                    <form class="contact-form fade-in" id="contactForm" action="/submit-form" method="POST">
-                        <div class="form-group">
-                            <label for="name">Imię i nazwisko</label>
-                            <input type="text" id="name" name="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">E-mail</label>
-                            <input type="email" id="email" name="email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="phone">Numer telefonu (opcjonalnie)</label>
-                            <input type="tel" id="phone" name="phone">
-                        </div>
-                        <div class="form-group">
-                            <label>Czego dotyczy wiadomość?</label>
-                            <div class="checkbox-group">
-                                <label><input type="checkbox" name="service" value="shopify"> Strony/sklepy Shopify</label>
-                                <label><input type="checkbox" name="service" value="wordpress"> Strony WordPress</label>
-                                <label><input type="checkbox" name="service" value="graphics"> Grafika i logo</label>
-                                <label><input type="checkbox" name="service" value="seo"> SEO/SEM</label>
-                                <label><input type="checkbox" name="service" value="maintenance"> Obsługa stron i sklepów</label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Wiadomość</label>
-                            <textarea id="message" name="message" required></textarea>
-                        </div>
-                        <button type="submit" class="submit-btn">Wyślij wiadomość</button>
-                    </form>
-                </div>
+      <section id="contact" class="contact">
+    <div class="container">
+        <h2>Skontaktuj się z nami</h2>
+        <div class="contact-content">
+            <div class="contact-info fade-in">
+                <p>Jesteśmy tutaj, aby Ci pomóc. Masz pytania lub chcesz omówić swój projekt? Skontaktuj się z nami już dziś!</p>
+                <p><strong>Telefon:</strong> <a href="tel:+48792828884">+48 792 828 884</a></p>
+                <p><strong>Email:</strong> <a href="mailto:creativefront.projects@gmail.com">creativefront.projects@gmail.com</a></p>
             </div>
-        </section>
+            <form class="contact-form fade-in" id="contactForm" name="contact" method="POST" data-netlify="true" action="/thank-you">
+                <input type="hidden" name="form-name" value="contact">
+                <div class="form-group">
+                    <label for="name">Imię i nazwisko</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">E-mail</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Numer telefonu (opcjonalnie)</label>
+                    <input type="tel" id="phone" name="phone">
+                </div>
+                <div class="form-group">
+                    <label>Czego dotyczy wiadomość?</label>
+                    <div class="checkbox-group">
+                        <label><input type="checkbox" name="service[]" value="shopify"> Strony/sklepy Shopify</label>
+                        <label><input type="checkbox" name="service[]" value="wordpress"> Strony WordPress</label>
+                        <label><input type="checkbox" name="service[]" value="graphics"> Grafika i logo</label>
+                        <label><input type="checkbox" name="service[]" value="seo"> SEO/SEM</label>
+                        <label><input type="checkbox" name="service[]" value="maintenance"> Obsługa stron i sklepów</label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="message">Wiadomość</label>
+                    <textarea id="message" name="message" required></textarea>
+                </div>
+                <button type="submit" class="submit-btn">Wyślij wiadomość</button>
+            </form>
+        </div>
+    </div>
+</section>
     </main>
 
     <footer class="footer">
