--- a/index.html
+++ b/index.html
@@ -178,8 +178,7 @@
                 <p><strong>Telefon:</strong> <a href="tel:+48792828884">+48 792 828 884</a></p>
                 <p><strong>Email:</strong> <a href="mailto:creativefront.projects@gmail.com">creativefront.projects@gmail.com</a></p>
             </div>
-            <form class="contact-form fade-in" id="contactForm" name="contact" method="POST" data-netlify="true" action="/thank-you">
-                <input type="hidden" name="form-name" value="contact">
+            <form class="contact-form fade-in" id="contactForm" action="https://formspree.io/f/xovajzqz" method="POST">
                 <div class="form-group">
                     <label for="name">Imię i nazwisko</label>
                     <input type="text" id="name" name="name" required>
