--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     <header class="navbar">
         <div class="navbar-container container">
             <a href="#" class="logo" aria-label="CreativeFront - Strona główna">CreativeFront</a>
+            <button class="hamburger" aria-label="Menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <nav aria-label="Menu główne">
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="#home" class="nav-link">Strona główna</a></li>
@@ -127,89 +132,89 @@
                         <img src="screencapture-cichoszau-pl-2024-07-23-19_16_03.png" alt="Strona główna sklepu Cichoszau" width="300" height="200" loading="lazy">
                         <div class="portfolio-overlay">
                             <h3 class="portfolio-title">cichoszau.pl</h3>
-                            <p class="portfolio-category"></p>
+                            <p class="portfolio-category">Sklep Shopify</p>
                         </div>
                     </article>
                     <article class="portfolio-item fade-in">
                         <img src="screencapture-zloty-kroj-pl-2024-07-23-19_18_45.png" alt="Strona główna Złoty Krój" width="300" height="200" loading="lazy">
                         <div class="portfolio-overlay">
                             <h3 class="portfolio-title">zloty-kroj.pl</h3>
-                            <p class="portfolio-category"></p>
+                            <p class="portfolio-category">Strona WordPress</p>
                         </div>
                     </article>
                     <article class="portfolio-item fade-in">
                         <img src="screencapture-starboys-pl-2024-07-23-19_17_09.png" alt="Logo i branding Starboys" width="300" height="200" loading="lazy">
                         <div class="portfolio-overlay">
                             <h3 class="portfolio-title">Starboys.pl</h3>
-                            <p class="portfolio-category"></p>
+                            <p class="portfolio-category">Logo i branding</p>
                         </div>
                     </article>
                     <article class="portfolio-item fade-in">
                         <img src="screencapture-vivalamoda-es-es-2024-08-13-15_39_47.png" alt="Strona główna Vivalamoda" width="300" height="200" loading="lazy">
                         <div class="portfolio-overlay">
                             <h3 class="portfolio-title">vivalamoda.es</h3>
-                            <p class="portfolio-category"></p>
+                            <p class="portfolio-category">Kampania SEO</p>
                         </div>
                     </article>
                     <article class="portfolio-item fade-in">
                         <img src="screencapture-oakey-co-nz-2024-07-23-19_28_39.png" alt="Sklep WooCommerce Oakey" width="300" height="200" loading="lazy">
                         <div class="portfolio-overlay">
                             <h3 class="portfolio-title">oakey.co.nz</h3>
-                            <p class="portfolio-category"></p>
+                            <p class="portfolio-category">Sklep WooCommerce</p>
                         </div>
                     </article>
                     <article class="portfolio-item fade-in">
                         <img src="screencapture-icedstuff-pl-2024-07-23-19_35_46.png" alt="Strona korporacyjna IcedStuff" width="300" height="200" loading="lazy">
                         <div class="portfolio-overlay">
                             <h3 class="portfolio-title">icedstuff.pl</h3>
-                            <p class="portfolio-category"></p>
+                            <p class="portfolio-category">Strona korporacyjna</p>
                         </div>
                     </article>
                 </div>
             </div>
         </section>
 
-      <section id="contact" class="contact">
-    <div class="container">
-        <h2>Skontaktuj się z nami</h2>
-        <div class="contact-content">
-            <div class="contact-info fade-in">
-                <p>Jesteśmy tutaj, aby Ci pomóc. Masz pytania lub chcesz omówić swój projekt? Skontaktuj się z nami już dziś!</p>
-                <p><strong>Telefon:</strong> <a href="tel:+48792828884">+48 792 828 884</a></p>
-                <p><strong>Email:</strong> <a href="mailto:creativefront.projects@gmail.com">creativefront.projects@gmail.com</a></p>
-            </div>
-            <form class="contact-form fade-in" id="contactForm" action="https://formspree.io/f/mblryvjp" method="POST">
-                <div class="form-group">
-                    <label for="name">Imię i nazwisko</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">E-mail</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="phone">Numer telefonu (opcjonalnie)</label>
-                    <input type="tel" id="phone" name="phone">
-                </div>
-                <div class="form-group">
-                    <label>Czego dotyczy wiadomość?</label>
-                    <div class="checkbox-group">
-                        <label><input type="checkbox" name="service[]" value="shopify"> Strony/sklepy Shopify</label>
-                        <label><input type="checkbox" name="service[]" value="wordpress"> Strony WordPress</label>
-                        <label><input type="checkbox" name="service[]" value="graphics"> Grafika i logo</label>
-                        <label><input type="checkbox" name="service[]" value="seo"> SEO/SEM</label>
-                        <label><input type="checkbox" name="service[]" value="maintenance"> Obsługa stron i sklepów</label>
+        <section id="contact" class="contact">
+            <div class="container">
+                <h2>Skontaktuj się z nami</h2>
+                <div class="contact-content">
+                    <div class="contact-info fade-in">
+                        <p>Jesteśmy tutaj, aby Ci pomóc. Masz pytania lub chcesz omówić swój projekt? Skontaktuj się z nami już dziś!</p>
+                        <p><strong>Telefon:</strong> <a href="tel:+48792828884">+48 792 828 884</a></p>
+                        <p><strong>Email:</strong> <a href="mailto:creativefront.projects@gmail.com">creativefront.projects@gmail.com</a></p>
                     </div>
+                    <form class="contact-form fade-in" id="contactForm" action="/submit-form" method="POST">
+                        <div class="form-group">
+                            <label for="name">Imię i nazwisko</label>
+                            <input type="text" id="name" name="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">E-mail</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Numer telefonu (opcjonalnie)</label>
+                            <input type="tel" id="phone" name="phone">
+                        </div>
+                        <div class="form-group">
+                            <label>Czego dotyczy wiadomość?</label>
+                            <div class="checkbox-group">
+                                <label><input type="checkbox" name="service" value="shopify"> Strony/sklepy Shopify</label>
+                                <label><input type="checkbox" name="service" value="wordpress"> Strony WordPress</label>
+                                <label><input type="checkbox" name="service" value="graphics"> Grafika i logo</label>
+                                <label><input type="checkbox" name="service" value="seo"> SEO/SEM</label>
+                                <label><input type="checkbox" name="service" value="maintenance"> Obsługa stron i sklepów</label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Wiadomość</label>
+                            <textarea id="message" name="message" required></textarea>
+                        </div>
+                        <button type="submit" class="submit-btn">Wyślij wiadomość</button>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label for="message">Wiadomość</label>
-                    <textarea id="message" name="message" required></textarea>
-                </div>
-                <button type="submit" class="submit-btn">Wyślij wiadomość</button>
-            </form>
-        </div>
-    </div>
-</section>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
