--- a/index.html
+++ b/index.html
@@ -184,20 +184,20 @@
                 <p><strong>Email:</strong> <a href="mailto:creativefront.projects@gmail.com">creativefront.projects@gmail.com</a></p>
             </div>
             <form class="contact-form fade-in" action="https://formspree.io/f/mblryvjp" method="POST">
-                <label>
-                    Twój email:
-                    <input type="email" name="email" required>
-                </label>
-                <label>
-                    Imię i nazwisko:
-                    <input type="text" name="name" required>
-                </label>
-                <label>
-                    Numer telefonu (opcjonalnie):
-                    <input type="tel" name="phone">
-                </label>
-                <label>
-                    Czego dotyczy wiadomość:
+                <div class="form-group">
+                    <label for="email">Twój email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="name">Imię i nazwisko:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Numer telefonu (opcjonalnie):</label>
+                    <input type="tel" id="phone" name="phone">
+                </div>
+                <div class="form-group">
+                    <label>Czego dotyczy wiadomość:</label>
                     <div class="checkbox-group">
                         <label><input type="checkbox" name="service[]" value="shopify"> Strony/sklepy Shopify</label>
                         <label><input type="checkbox" name="service[]" value="wordpress"> Strony WordPress</label>
@@ -205,12 +205,12 @@
                         <label><input type="checkbox" name="service[]" value="seo"> SEO/SEM</label>
                         <label><input type="checkbox" name="service[]" value="maintenance"> Obsługa stron i sklepów</label>
                     </div>
-                </label>
-                <label>
-                    Twoja wiadomość:
-                    <textarea name="message" required></textarea>
-                </label>
-                <button type="submit">Wyślij</button>
+                </div>
+                <div class="form-group">
+                    <label for="message">Twoja wiadomość:</label>
+                    <textarea id="message" name="message" required></textarea>
+                </div>
+                <button type="submit" class="submit-btn">Wyślij</button>
             </form>
         </div>
     </div>
