--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                 "https://www.instagram.com/creativefront"
             ]
         }
-
     </script>
 </head>
 
@@ -173,7 +172,6 @@
                 </div>
             </div>
         </section>
-
         <section id="contact" class="contact">
             <div class="container">
                 <h2>Skontaktuj się z nami</h2>
@@ -183,34 +181,34 @@
                         <p><strong>Telefon:</strong> <a href="tel:+48792828884">+48 792 828 884</a></p>
                         <p><strong>Email:</strong> <a href="mailto:creativefront.projects@gmail.com">creativefront.projects@gmail.com</a></p>
                     </div>
-                    <form class="contact-form fade-in" id="contactForm" action="/submit-form" method="POST">
-                        <div class="form-group">
-                            <label for="name">Imię i nazwisko</label>
-                            <input type="text" id="name" name="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">E-mail</label>
+                    <form class="contact-form fade-in" action="https://formspree.io/f/mblryvjp" method="POST">
+                        <div class="form-row">
+                            <label for="email">Twój email:</label>
                             <input type="email" id="email" name="email" required>
                         </div>
-                        <div class="form-group">
-                            <label for="phone">Numer telefonu (opcjonalnie)</label>
+                        <div class="form-row">
+                            <label for="name">Imię i nazwisko:</label>
+                            <input type="text" id="name" name="name" required>
+                        </div>
+                        <div class="form-row">
+                            <label for="phone">Numer telefonu (opcjonalnie):</label>
                             <input type="tel" id="phone" name="phone">
                         </div>
-                        <div class="form-group">
-                            <label>Czego dotyczy wiadomość?</label>
+                        <div class="form-row">
+                            <label>Czego dotyczy wiadomość:</label>
                             <div class="checkbox-group">
-                                <label><input type="checkbox" name="service" value="shopify"> Strony/sklepy Shopify</label>
-                                <label><input type="checkbox" name="service" value="wordpress"> Strony WordPress</label>
-                                <label><input type="checkbox" name="service" value="graphics"> Grafika i logo</label>
-                                <label><input type="checkbox" name="service" value="seo"> SEO/SEM</label>
-                                <label><input type="checkbox" name="service" value="maintenance"> Obsługa stron i sklepów</label>
+                                <label><input type="checkbox" name="service[]" value="shopify"> Strony/sklepy Shopify</label>
+                                <label><input type="checkbox" name="service[]" value="wordpress"> Strony WordPress</label>
+                                <label><input type="checkbox" name="service[]" value="graphics"> Grafika i logo</label>
+                                <label><input type="checkbox" name="service[]" value="seo"> SEO/SEM</label>
+                                <label><input type="checkbox" name="service[]" value="maintenance"> Obsługa stron i sklepów</label>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="message">Wiadomość</label>
+                        <div class="form-row">
+                            <label for="message">Twoja wiadomość:</label>
                             <textarea id="message" name="message" required></textarea>
                         </div>
-                        <button type="submit" class="submit-btn">Wyślij wiadomość</button>
+                        <button type="submit" class="submit-btn">Wyślij</button>
                     </form>
                 </div>
             </div>
@@ -239,6 +237,4 @@
     </footer>
 
     <script src="script.js" defer></script>
-</body>
-
-</html>
+</body></html>
