--- a/index.html
+++ b/index.html
@@ -131,42 +131,42 @@
                         <img src="screencapture-cichoszau-pl-2024-07-23-19_16_03.png" alt="Strona główna sklepu Cichoszau" width="300" height="200" loading="lazy">
                         <div class="portfolio-overlay">
                             <h3 class="portfolio-title">cichoszau.pl</h3>
-                            <p class="portfolio-category">Sklep Shopify</p>
+                            <p class="portfolio-category"></p>
                         </div>
                     </article>
                     <article class="portfolio-item fade-in">
                         <img src="screencapture-zloty-kroj-pl-2024-07-23-19_18_45.png" alt="Strona główna Złoty Krój" width="300" height="200" loading="lazy">
                         <div class="portfolio-overlay">
                             <h3 class="portfolio-title">zloty-kroj.pl</h3>
-                            <p class="portfolio-category">Strona WordPress</p>
+                            <p class="portfolio-category"></p>
                         </div>
                     </article>
                     <article class="portfolio-item fade-in">
                         <img src="screencapture-starboys-pl-2024-07-23-19_17_09.png" alt="Logo i branding Starboys" width="300" height="200" loading="lazy">
                         <div class="portfolio-overlay">
                             <h3 class="portfolio-title">Starboys.pl</h3>
-                            <p class="portfolio-category">Logo i branding</p>
+                            <p class="portfolio-category"></p>
                         </div>
                     </article>
                     <article class="portfolio-item fade-in">
                         <img src="screencapture-vivalamoda-es-es-2024-08-13-15_39_47.png" alt="Strona główna Vivalamoda" width="300" height="200" loading="lazy">
                         <div class="portfolio-overlay">
                             <h3 class="portfolio-title">vivalamoda.es</h3>
-                            <p class="portfolio-category">Kampania SEO</p>
+                            <p class="portfolio-category"></p>
                         </div>
                     </article>
                     <article class="portfolio-item fade-in">
                         <img src="screencapture-oakey-co-nz-2024-07-23-19_28_39.png" alt="Sklep WooCommerce Oakey" width="300" height="200" loading="lazy">
                         <div class="portfolio-overlay">
                             <h3 class="portfolio-title">oakey.co.nz</h3>
-                            <p class="portfolio-category">Sklep WooCommerce</p>
+                            <p class="portfolio-category"></p>
                         </div>
                     </article>
                     <article class="portfolio-item fade-in">
                         <img src="screencapture-ekoshot-pl-2024-08-28-13_13_29.png" alt="Strona korporacyjna IcedStuff" width="300" height="200" loading="lazy">
                         <div class="portfolio-overlay">
-                            <h3 class="portfolio-title">icedstuff.pl</h3>
-                            <p class="portfolio-category">Strona korporacyjna</p>
+                            <h3 class="portfolio-title">ekoshot.pl</h3>
+                            <p class="portfolio-category"></p>
                         </div>
                     </article>
                 </div>
