--- a/index.html
+++ b/index.html
@@ -181,20 +181,20 @@
                         <p><strong>Telefon:</strong> <a href="tel:+48792828884">+48 792 828 884</a></p>
                         <p><strong>Email:</strong> <a href="mailto:creativefront.projects@gmail.com">creativefront.projects@gmail.com</a></p>
                     </div>
-                    <form class="contact-form fade-in" action="https://formspree.io/f/mblryvjp" method="POST">
-                        <div class="form-row">
+                    <form name="contact" method="POST" data-netlify="true">
+                        <div class="form-group">
                             <label for="email">Twój email:</label>
                             <input type="email" id="email" name="email" required>
                         </div>
-                        <div class="form-row">
+                        <div class="form-group">
                             <label for="name">Imię i nazwisko:</label>
                             <input type="text" id="name" name="name" required>
                         </div>
-                        <div class="form-row">
+                        <div class="form-group">
                             <label for="phone">Numer telefonu (opcjonalnie):</label>
                             <input type="tel" id="phone" name="phone">
                         </div>
-                        <div class="form-row">
+                        <div class="form-group">
                             <label>Czego dotyczy wiadomość:</label>
                             <div class="checkbox-group">
                                 <label><input type="checkbox" name="service[]" value="shopify"> Strony/sklepy Shopify</label>
@@ -204,7 +204,7 @@
                                 <label><input type="checkbox" name="service[]" value="maintenance"> Obsługa stron i sklepów</label>
                             </div>
                         </div>
-                        <div class="form-row">
+                        <div class="form-group">
                             <label for="message">Twoja wiadomość:</label>
                             <textarea id="message" name="message" required></textarea>
                         </div>
