--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                             <textarea id="message" name="message" required></textarea>
                         </div>
                         <button type="submit" class="submit-btn">Wyślij</button>
+                    <input type="hidden" name="form-name" value="contact">
                     </form>
                 </div>
             </div>
