--- a/index.html
+++ b/index.html
@@ -184,29 +184,29 @@
                     <form action="https://formspree.io/f/mgvwdlvj" method="POST" class="contact-form fade-in">
     <div class="form-group">
         <label for="email">Twój email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="e-mail" required>
     </div>
     <div class="form-group">
         <label for="name">Imię i nazwisko:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="Imię i nazwisko" required>
     </div>
     <div class="form-group">
-        <label for="phone">Numer telefonu (opcjonalnie):</label>
-        <input type="tel" id="phone" name="phone">
+        <label for="phone">Numer telefonu:</label>
+        <input type="tel" id="phone" name="Numer telefonu">
     </div>
     <div class="form-group">
         <label>Czego dotyczy wiadomość:</label>
         <div class="checkbox-group">
-            <label><input type="checkbox" name="service[]" value="shopify"> Strony/sklepy Shopify</label>
-            <label><input type="checkbox" name="service[]" value="wordpress"> Strony WordPress</label>
-            <label><input type="checkbox" name="service[]" value="graphics"> Grafika i logo</label>
-            <label><input type="checkbox" name="service[]" value="seo"> SEO/SEM</label>
-            <label><input type="checkbox" name="service[]" value="maintenance"> Obsługa stron i sklepów</label>
+            <label><input type="checkbox" name="service[]" value="Strony/sklepy Shopify"> Strony/sklepy Shopify</label>
+            <label><input type="checkbox" name="service[]" value="Strony WordPress"> Strony WordPress</label>
+            <label><input type="checkbox" name="service[]" value="Grafika i logo"> Grafika i logo</label>
+            <label><input type="checkbox" name="service[]" value="SEO/SEM"> SEO/SEM</label>
+            <label><input type="checkbox" name="service[]" value="Obsługa stron i sklepów"> Obsługa stron i sklepów</label>
         </div>
     </div>
     <div class="form-group">
         <label for="message">Twoja wiadomość:</label>
-        <textarea id="message" name="message" required></textarea>
+        <textarea id="message" name="Twoja wiadomość" required></textarea>
     </div>
     <button type="submit" class="submit-btn">Wyślij</button>
 </form>
